core/traefik/geoblock-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: geoblock
  namespace: kube-system
spec:
  plugin:
    geoblock:
      allowLocalRequests: true
      allowUnknownCountries: false
      api: https://get.geojs.io/v1/ip/country/{ip}
      apiTimeoutMs: 150
      cacheSize: 15
      countries:
        - US
        - TW
      forceMonthlyUpdate: true
      logAllowedRequests: false
      logApiRequests: true
      logLocalRequests: false
      silentStartUp: false
      unknownCountryApiResponse: nil
